[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://scene/UI/UpgradeScreen.gd" type="Script" id=2]
[ext_resource path="res://scene/UI/CartButon.gd" type="Script" id=3]
[ext_resource path="res://scene/UI/UpgradeButton.gd" type="Script" id=4]

[node name="UpgradeScreen" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.027451, 0.12549, 0.780392 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CartButon" type="OptionButton" parent="HBoxContainer"]
margin_right = 2560.0
margin_bottom = 685.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "select Cart"
flat = true
align = 1
script = ExtResource( 3 )

[node name="UpgradeButton" type="OptionButton" parent="HBoxContainer"]
margin_top = 689.0
margin_right = 2560.0
margin_bottom = 1375.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "select Upgrade"
flat = true
align = 1
script = ExtResource( 4 )

[node name="confirmButton" type="Button" parent="HBoxContainer"]
margin_top = 1379.0
margin_right = 2560.0
margin_bottom = 1600.0
theme = ExtResource( 1 )
text = "x confirm"
flat = true

[connection signal="item_selected" from="HBoxContainer/CartButon" to="." method="_on_CartButon_item_selected"]
[connection signal="item_focused" from="HBoxContainer/UpgradeButton" to="." method="_on_UpgradeButton_item_focused"]
[connection signal="item_selected" from="HBoxContainer/UpgradeButton" to="." method="_on_UpgradeButton_item_selected"]
[connection signal="pressed" from="HBoxContainer/confirmButton" to="." method="_on_confirmButton_pressed"]
